--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Typing Practice</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <style>
+        .correct { color: black; }
+        .error { color: red; }
+        .cursor { background-color: yellow; }
+    </style>
 </head>
 <body class="bg-gray-100 flex items-center justify-center min-h-screen">
     <div class="bg-white p-6 rounded-lg shadow-lg w-full max-w-2xl">
@@ -13,8 +18,7 @@
             <label for="timeLimit" class="block text-sm font-medium text-gray-700">Set Time Limit (minutes):</label>
             <input type="number" id="timeLimit" class="w-24 p-2 border rounded" value="1" min="1" max="5" step="0.5">
         </div>
-        <p id="sampleText" class="text-lg mb-4 p-4 bg-gray-200 rounded"></p>
-        <textarea id="userInput" class="w-full p-2 border rounded mb-4" rows="4" placeholder="Start typing here..."></textarea>
+        <div id="sampleText" class="text-lg mb-4 p-4 bg-gray-200 rounded" contenteditable="true"></div>
         <div class="flex justify-end mb-4">
             <button id="resetBtn" class="bg-red-500 text-white px-4 py-2 rounded hover:bg-red-600">Reset</button>
         </div>
@@ -27,27 +31,53 @@
 
     <script>
         const sampleTextElement = document.getElementById('sampleText');
-        const userInputElement = document.getElementById('userInput');
         const resetBtn = document.getElementById('resetBtn');
         const wpmElement = document.getElementById('wpm');
         const accuracyElement = document.getElementById('accuracy');
         const timeElement = document.getElementById('time');
         const timeLimitInput = document.getElementById('timeLimit');
 
-        const sampleTexts = [
-            "The quick brown fox jumps over the lazy dog.",
-            "Typing is a skill that improves with practice.",
-            "A journey of a thousand miles begins with a single step.",
-            "Practice makes perfect, so keep typing every day.",
-            "The early bird catches the worm."
+        // Lorem Ipsum generator
+        const loremIpsumWords = [
+            "lorem", "ipsum", "dolor", "sit", "amet", "consectetur", "adipiscing", "elit", "sed", "do",
+            "eiusmod", "tempor", "incididunt", "ut", "labore", "et", "dolore", "magna", "aliqua", "ut",
+            "enim", "ad", "minim", "veniam", "quis", "nostrud", "exercitation", "ullamco", "laboris",
+            "nisi", "ut", "aliquip", "ex", "ea", "commodo", "consequat", "duis", "aute", "irure",
+            "dolor", "in", "reprehenderit", "in", "voluptate", "velit", "esse", "cillum", "dolore",
+            "eu", "fugiat", "nulla", "pariatur"
         ];
 
+        let defaultText = "Lorem ipsum dolor sit amet, consectetur adipiscing elit.";
+        let currentText = defaultText;
+        let typedChars = [];
         let startTime, timerInterval;
         let isTyping = false;
         let timeLimit = 60; // Default time limit in seconds (1 minute)
+        let currentPosition = 0;
 
-        function getRandomText() {
-            return sampleTexts[Math.floor(Math.random() * sampleTexts.length)];
+        function generateLoremIpsum() {
+            let words = [];
+            const wordCount = Math.floor(Math.random() * 20) + 30; // 30-50 words
+            for (let i = 0; i < wordCount; i++) {
+                words.push(loremIpsumWords[Math.floor(Math.random() * loremIpsumWords.length)]);
+            }
+            return words.join(" ") + ".";
+        }
+
+        function renderText() {
+            sampleTextElement.innerHTML = '';
+            currentText.split('').forEach((char, index) => {
+                const span = document.createElement('span');
+                span.textContent = char;
+                if (index < currentPosition) {
+                    span.className = typedChars[index] === char ? 'correct' : 'error';
+                }
+                if (index === currentPosition) {
+                    span.className = 'cursor';
+                }
+                sampleTextElement.appendChild(span);
+            });
+            sampleTextElement.focus();
         }
 
         function formatTime(seconds) {
@@ -59,10 +89,12 @@
         function startTyping() {
             if (!isTyping) {
                 timeLimit = parseFloat(timeLimitInput.value) * 60 || 60; // Convert minutes to seconds
-                sampleTextElement.textContent = sampleTexts[0]; // Show first sentence by default
-                userInputElement.value = '';
-                userInputElement.disabled = false;
-                userInputElement.focus();
+                currentText = defaultText;
+                currentPosition = 0;
+                typedChars = [];
+                renderText();
+                sampleTextElement.disabled = false;
+                sampleTextElement.focus();
                 startTime = new Date();
                 isTyping = true;
                 timeLimitInput.disabled = true;
@@ -74,9 +106,11 @@
         function resetTyping() {
             clearInterval(timerInterval);
             isTyping = false;
-            sampleTextElement.textContent = sampleTexts[0]; // Reset to first sentence
-            userInputElement.value = '';
-            userInputElement.disabled = false;
+            currentText = defaultText;
+            currentPosition = 0;
+            typedChars = [];
+            renderText();
+            sampleTextElement.disabled = false;
             timeLimitInput.disabled = false;
             wpmElement.textContent = '0';
             accuracyElement.textContent = '0%';
@@ -92,7 +126,7 @@
             if (timeRemaining <= 0) {
                 clearInterval(timerInterval);
                 isTyping = false;
-                userInputElement.disabled = true;
+                sampleTextElement.disabled = true;
                 timeLimitInput.disabled = false;
                 calculateResults(); // Final calculation
             }
@@ -100,29 +134,48 @@
 
         function calculateResults() {
             const timeElapsed = Math.min(Math.floor((new Date() - startTime) / 1000), timeLimit);
-            const typedText = userInputElement.value.trim();
-            const sampleText = sampleTextElement.textContent;
+            const typedText = typedChars.join('');
 
             // Calculate WPM
-            const wordsTyped = typedText.split(' ').length;
+            const wordsTyped = typedText.trim().split(' ').length;
             const wpm = timeElapsed > 0 ? Math.round((wordsTyped / timeElapsed) * 60) : 0;
             wpmElement.textContent = wpm;
 
             // Calculate Accuracy
             let correctChars = 0;
-            for (let i = 0; i < Math.min(typedText.length, sampleText.length); i++) {
-                if (typedText[i] === sampleText[i]) correctChars++;
+            for (let i = 0; i < Math.min(typedText.length, currentText.length); i++) {
+                if (typedText[i] === currentText[i]) correctChars++;
             }
-            const accuracy = typedText.length > 0 ? Math.round((correctChars / sampleText.length) * 100) : 0;
+            const accuracy = typedText.length > 0 ? Math.round((correctChars / currentText.length) * 100) : 0;
             accuracyElement.textContent = `${accuracy}%`;
         }
 
-        userInputElement.addEventListener('keydown', () => {
+        sampleTextElement.addEventListener('keydown', (e) => {
+            e.preventDefault(); // Prevent default typing in contenteditable
             if (!isTyping) {
                 startTyping();
             }
+
+            if (isTyping) {
+                if (e.key.length === 1) { // Regular character
+                    typedChars[currentPosition] = e.key;
+                    currentPosition++;
+                    calculateResults();
+                    if (currentPosition >= currentText.length) {
+                        currentText = generateLoremIpsum();
+                        currentPosition = 0;
+                        typedChars = [];
+                    }
+                    renderText();
+                } else if (e.key === 'Backspace' && currentPosition > 0) {
+                    currentPosition--;
+                    typedChars.pop();
+                    calculateResults();
+                    renderText();
+                }
+            }
         });
-        userInputElement.addEventListener('input', calculateResults);
+
         resetBtn.addEventListener('click', resetTyping);
         timeLimitInput.addEventListener('change', () => {
             if (!isTyping) {
