--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Typing Practice</title>
   <link rel="icon" type="image/x-icon" href="/favicon.ico">
   <link rel="icon" type="image/x-icon" href="/favicon-16x16.png">
+  <link rel="icon" type="image/x-icon" href="/favicon-32x32.png">
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
    <style>
